career prep changes

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <div class="header-right">
       <a class="active" href="#about">  About  </a>
       <a href="mywork.html"> Work  </a>
-      <a href="#contact"> Contact </a>
+      <a href="contact.html"> Contact </a>
       <a href="skills.html">Skills</a>
     </div>
   </div>
@@ -44,7 +44,7 @@
       <br>
       I earned my undergraduate degree from Metro State University of Denver with a Bachelor of Fine Art in Digital Art. I made Provost List and graduated Cum Laude in three years.
 <br><br>
-      After school, I earned a living doing freelance logo design, photo editing and some print design. Not long after,  a one-time wedding processing gig turned into a full time contract, and I found myself in that role for the next 7 years.
+      After school, I earned a living doing freelance logo design, photo editing and print design. Not long after,  a one-time wedding processing gig turned into a full time contract, and I found myself in that role for the next 7 years.
       <br><br>
       When the COVID-19 pandemic canceled every wedding for the season, I used the downtime to assess what my true career goals were, and realized that as much as I loved working with photographers; creating from scratch, optimizing workflow and solving design problems was what truly made me happy. Looking to find something that would better satisfy my strengths, I was recommended to check out UX/UI by a developer friend who was familiar with my talents, and soon after, I enrolled in a UX/UI Bootcamp at The University of Denver.
       <br><br>
@@ -56,10 +56,11 @@
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
   <div class="footer-right">
-    <button class="b1"></button>
-    <button class="b2"></button>
-    <button class="b3"></button>
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
+    <a href="contact.html"><button class="b3"></button></a>
   </div>
+</div>
 </div>
 </body>
 </html>
