--- a/madplanet.html
+++ b/madplanet.html
@@ -22,7 +22,7 @@
     <div class="header-right">
       <a href="about.html">  About  </a>
       <a class="active" href="mywork.html"> Work  </a>
-      <a href="#contact"> Contact </a>
+      <a href="contact.html"> Contact </a>
       <a href="skills.html">Skills</a>
     </div>
   </div>
@@ -39,19 +39,22 @@
         <p class="sidebarcopy">
           madPLANET learns about users with every interaction, and offers them products that match their goals. It follows a Consumer's Co-op model, offering low prices on conscious products. 
 
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br>
+            
+            <br><br><br><br><br><br><br><br><br><br><br><br>
             </p>
            
       </div>
       <div class="jumbotron">
   <h1 class="display-4">App Overview</h1>
-  <p class="lead">madPLANET was an app designed with the idea that users shouldn’t have to choose between a budget and doing the Right Thing. Our team set out to build an app that allowed users more control over where their dollars were going, by learning about each individual user’s ethical needs. The app would set up a Planet Profile and recommend products accordingly.
+  <p class="lead">MadPLANET was designed with the idea that users shouldn’t have to choose between a budget and doing the Right Thing. Our team set out to build an app that allowed users more control over where their dollars were going, by learning about each individual user’s ethical needs. The app would set up a Planet Profile and recommend products accordingly.
 
 
     <br><br>My role in the UX portion of the app development was mainly focused on User Research through in-person interviews. The data was compiled and leveraged into Affinity Diagrams and used to create a robust User Persona.
     <br><br>
     In the UI development, in addition to developing the main shopping, profile and checkout modules, I was tasked with styling the app’s colors, iconography and interactions.
     <br><br>
+    The team used Figma, Figjam, Photoshop, Illustrator, Visual Studio Code, Jquery, JavaScript, Github, Google Forms, InVision and Trello.
 </p>
   
 </div>
@@ -62,9 +65,9 @@
           <div class="footer">
             <div class="copyright">Copyright Andrew Bell 2021</div>
             <div class="footer-right">
-              <button class="b1"></button>
-              <button class="b2"></button>
-              <button class="b3"></button>
+              <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
+              <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
+              <a href="contact.html"><button class="b3"></button></a>
             </div>
           </div>
     <!-- Optional JavaScript; choose one of the two! -->
