--- a/mywork.html
+++ b/mywork.html
@@ -19,7 +19,7 @@
     <div class="header-right">
       <a href="about.html">  About  </a>
       <a class="active" href="mywork.html"> Work  </a>
-      <a href="#contact"> Contact </a>
+      <a href="contact.html"> Contact </a>
       <a href="skills.html">Skills</a>
     </div>
   </div>
@@ -27,17 +27,17 @@
 <!--body-->
 <div class="sidebar"><br><br>
 <h1>My Work</h1>
-<p>
-  Andy Bell is a Denver-based UX/UI designer with a passion for solving problems and a flare for visual design.
-  <BR><BR>
-  All work was done for The University of Denver UX/UI program. Click a link to see the Case study, Wireframes and Working Prototype.
+
+  All work was done for The University of Denver UX/UI program.<br><br> Click a link to see the Case study, Wireframes and Working Prototype.
     
 </p>
 </div>
+
 <!--a-tags in flexbox (put css bg image in head)-->
 <div class="workContainer">
-  <a href="madplanet.html"><div class="workLink3"></div><span><h3 class="blackFont">madPLANET Mobile Shopping App</h1></span></a>
-  <a href="smt.html"><div class="workLink1"></div><span><h3 class="blackFont">SMT non-profit Redesign</h1></span></a>
+  <a href="madplanet.html"><div class="workLink3"><p class="workdescriptions">MadPlanet is a Mobile Shopping App designed to give users more control over where their dollars go.<br><br>Our team listened to users to understand where they felt let down by modern online shopping options, and designed an app they could feel good about using.</p></div><span><h3 class="blackFont">MadPlanet</h3></span></a>
+  <a href="smt.html"><div class="workLink1"><p class="workdescriptions2">SMT is a Trail Stewardship Non-Profit with a great mission and a website that needed some help.<br><br>Our team re-designed the site to be more mission-centric with a modern aesthetic and AA accessibility.
+    </p></div><span><h3 class="blackFont">Salida Mountain Trails</h3></span></a>
   <!--<a href="#FCC"><div class="workLink2"></div><span><h3 class="blackFont">FCC Website Redesign</h1></span></a>
   -->
 
@@ -45,9 +45,10 @@
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
   <div class="footer-right">
-    <button class="b1"></button>
-    <button class="b2"></button>
-    <button class="b3"></button>
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
+    <a href="contact.html"><button class="b3"></button></a>
   </div>
+</div>
 </div>
   </body>
