--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     <div class="header-right">
       <a href="about.html">  About  </a>
       <a href="mywork.html"> Work  </a>
-      <a href="#contact"> Contact </a>
-      <a class="active"  href="#skills">Skills</a>
+      <a class="active"  href="#contact"> Contact </a>
+      <a  href="skills.html">Skills</a>
     </div>
   </div>
 </div>
@@ -29,38 +29,28 @@
 
 
 <div class="sidebar">
-  <br><br><h1>UX/UI Skills</h1>
+  <br><br><h1>Contact Me</h1>
   <ul>
-    <li>Proficiency in UX/UI design and prototyping tools
-      with Expertise in Figma and Adobe XD</li>
-    <li>UX research methods and Design
-      Thinking</li>
-    <li>User Interviewing and Testing</li>
-      <li>Interaction Design</li>
-      <li>Proficiency in Adobe Creative Suite with Expertise in
-        Photoshop, Lightroom and Premiere</li>
-        <li>Proficiency in CSS, HTML and Various Content
-          Management Systems</li>
-          <li>Proficiency in Mac and Windows platforms
-            Advanced knowledge of computer hardware and
-            assembly</li>
+    <li><a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="_blank">Linkedin</a></li>
+    <li><a href = "mailto: andrew.d.bell@gmail.com" target="_blank">Email</a></li>
+    <li><a href= "media/Andy Bell UXUI 2022.pdf" target="_blank">Resume</a></li>
   </ul>  
 </div>
 <div class="container">
   <div class="skills-image-one"></div>
   <div class="tallimage2"></div>
-  <div class="skillscopy"><div class= orangeHeadline>Skills in Practice<br></div>
+  <div class="skillscopy"><div class= orangeHeadline>Contact Info<br></div>
     <div class="whiteonGray">
-    <br>Snappy copy about contacting stakeholders, finding good interview canditates, iterating until due date, interaction testing.<br><br>
-    More copy about soft skills. Dealing with photographers and clients, service industry, logo design, painting and illustration.
+    <br>
+    Available for contract work and fulltime employment
   </div></div>
 </div>
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
   <div class="footer-right">
-    <button class="b1"></button>
-    <button class="b2"></button>
-    <button class="b3"></button>
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
+    <a href="contact.html"><button class="b3"></button></a>
   </div>
 </div>
 </body>
