--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header-right">
       <a href="about.html">  About  </a>
       <a href="mywork.html"> Work  </a>
-      <a href="#contact"> Contact </a>
+      <a href="contact.html"> Contact </a>
       <a href="skills.html">Skills</a>
     </div>
   </div>
@@ -30,14 +30,14 @@
   <a href="mywork.html"> <img class="bubble" src="images/splash images/fastbubble.png"></a>
 
 
-<div class="footer">
-  <div class="copyright">Copyright Andrew Bell 2021</div>
-  <div class="footer-right">
-    <button class="b1"></button>
-    <button class="b2"></button>
-    <button class="b3"></button>
+  <div class="footer">
+    <div class="copyright">Copyright Andrew Bell 2021</div>
+    <div class="footer-right">
+      <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
+      <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
+      <a href="contact.html"><button class="b3"></button></a>
+    </div>
   </div>
-</div>
 
 
     <!-- Add the script tag to jQuery below. -->
