--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,7 @@
     <div class="header-right">
       <a href="about.html">  About  </a>
       <a href="mywork.html"> Work  </a>
-      <a href="#contact"> Contact </a>
+      <a href="contact.html"> Contact </a>
       <a class="active"  href="#skills">Skills</a>
     </div>
   </div>
@@ -51,7 +51,7 @@
   <div class="tallimage2"></div>
   <div class="skillscopy"><div class= orangeHeadline>Skills in Practice<br></div>
     <div class="whiteonGray">
-    <br>Throughout my professional career I've been laser-focused on doing things right. As a student I was happy to go above and beyond by contacting stakeholders by whatever means necessary and coming up with creative tactics to find good interview candidates. I loved iterating and refining until each and every project was due, and was excited every step of the way, from brainstorming to presentation.
+    <br>Throughout my professional career I've been laser-focused on doing things right. As a student I was happy to go above and beyond by contacting stakeholders by whatever means necessary and coming up with creative tactics to find good interview candidates. I loved iterating and refining until each and every project was due, and was excited every step of the way; from brainstorming to presentation.
 <br><br>
     As a photo and video processor, attention to detail and time management were essential. Every client expected every single image to be perfect and it didn’t matter that I was handling TENS of THOUSANDS of photos a week, if even a single blink slipped through the cracks, I would hear about it, and quickly learned to never miss a beat.
     <br><br>
@@ -62,10 +62,11 @@
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
   <div class="footer-right">
-    <button class="b1"></button>
-    <button class="b2"></button>
-    <button class="b3"></button>
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
+    <a href="contact.html"><button class="b3"></button></a>
   </div>
+</div>
 </div>
 </body>
 </html>
