--- a/smt.html
+++ b/smt.html
@@ -22,7 +22,7 @@
     <div class="header-right">
       <a href="about.html">  About  </a>
       <a class="active" href="mywork.html"> Work  </a>
-      <a href="#contact"> Contact </a>
+      <a href="contact.html"> Contact </a>
       <a href="skills.html">Skills</a>
     </div>
   </div>
@@ -53,14 +53,14 @@
   <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="smt3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
   <a class="btn btn-primary btn-lg" href="smt2.html" role="button">></a>
 </div>
-          <div class="footer">
-            <div class="copyright">Copyright Andrew Bell 2021</div>
-            <div class="footer-right">
-              <button class="b1"></button>
-              <button class="b2"></button>
-              <button class="b3"></button>
-            </div>
-          </div>
+<div class="footer">
+  <div class="copyright">Copyright Andrew Bell 2021</div>
+  <div class="footer-right">
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
+    <a href="contact.html"><button class="b3"></button></a>
+  </div>
+</div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
