--- a/smt6.html
+++ b/smt6.html
@@ -68,9 +68,9 @@
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
   <div class="footer-right">
-    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
-    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
-    <a href="contact.html"><button class="b3"></button></a>
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button title="Resume" class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button  title="LinkedIn" class="b2"></button></a>
+    <a href="contact.html"><button title="Contact" class="b3"></button></a>
   </div>
 </div>
     <!-- Optional JavaScript; choose one of the two! -->
