--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
   <br><br><h1>Contact Me</h1>
   <ul>
     <li><a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="_blank">Linkedin</a></li>
-    <li><a href = "mailto: andrew.d.bell@gmail.com" target="_blank">Email</a></li>
+    <li><a href = "mailto: andrew.d.bell@gmail.com" class="mailto" target="_blank">Email</a></li>
     <li><a href= "media/Andy Bell UXUI 2022.pdf" target="_blank">Resume</a></li>
   </ul>  
 </div>
@@ -48,9 +48,9 @@
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
   <div class="footer-right">
-    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
-    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
-    <a href="contact.html"><button class="b3"></button></a>
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button title="Resume" class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button  title="LinkedIn" class="b2"></button></a>
+    <a href="contact.html"><button title="Contact" class="b3"></button></a>
   </div>
 </div>
 </body>
