--- a/smt2.html
+++ b/smt2.html
@@ -60,12 +60,13 @@
   <a class="btn btn-primary btn-lg mainbutt" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="smt3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.htm" role="button">Test</a>
   <a class="btn btn-primary btn-lg" href="smt3.html" role="button">></a>
 </div>
+
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
   <div class="footer-right">
-    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button class="b1"></button></a>
-    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button class="b2"></button></a>
-    <a href="contact.html"><button class="b3"></button></a>
+    <a href="media/Andy Bell UXUI 2022.pdf" target="blank"><button title="Resume" class="b1"></button></a>
+    <a href="https://www.linkedin.com/in/andy-bell-b0b8b250/" target="blank"><button  title="LinkedIn" class="b2"></button></a>
+    <a href="contact.html"><button title="Contact" class="b3"></button></a>
   </div>
 </div>
     <!-- Optional JavaScript; choose one of the two! -->
